5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4153/executions/1593_2426.log
== TEST (2019-03-26 10:30:11) 
-- CODE:
tempo=float(input("Insira o tempo gasto: "))
Vel=float(input("Insira o velocidade media: "))

dp = vel/tempo
ql = dp / 12.0

print(dp)
print(ql)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    dp = vel/tempo
NameError: name 'vel' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:30:39) 
-- CODE:
tempo=float(input("Insira o tempo gasto: "))
vel=float(input("Insira o velocidade media: "))

dp = vel/tempo
ql = dp / 12.0

print(dp)
print(ql)
-- OUTPUT:
11.11111111111111
0.9259259259259259
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:31:46) 
-- CODE:
tempo=float(input("Insira o tempo gasto: "))
vel=float(input("Insira o velocidade media: "))

dp = tempo/vel
ql = dp / 12.0

print(dp)
#print(ql)
-- OUTPUT:
0.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:32:12) 
-- CODE:
tempo=float(input("Insira o tempo gasto: "))
vel=float(input("Insira o velocidade media: "))

dp = vel/tempo
ql = dp / 12.0

print(dp)
#print(ql)
-- OUTPUT:
11.11111111111111
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:32:58) 
-- CODE:
tempo=float(input("Insira o tempo gasto: "))
vel=float(input("Insira o velocidade media: "))

dp = vel/tempo
ql = dp / 12.0

print(dp)
#print(ql)
-- OUTPUT:
11.11111111111111
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:32:58) 
-- CODE:
tempo=float(input("Insira o tempo gasto: "))
vel=float(input("Insira o velocidade media: "))

dp = vel/tempo
ql = dp / 12.0

print(dp)
#print(ql)
-- OUTPUT:
11.11111111111111
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:32:58) 
-- CODE:
tempo=float(input("Insira o tempo gasto: "))
vel=float(input("Insira o velocidade media: "))

dp = vel/tempo
ql = dp / 12.0

print(dp)
#print(ql)
-- OUTPUT:
11.11111111111111
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:32:58) 
-- CODE:
tempo=float(input("Insira o tempo gasto: "))
vel=float(input("Insira o velocidade media: "))

dp = vel/tempo
ql = dp / 12.0

print(dp)
#print(ql)
-- OUTPUT:
11.11111111111111
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:32:58) 
-- CODE:
tempo=float(input("Insira o tempo gasto: "))
vel=float(input("Insira o velocidade media: "))

dp = vel/tempo
ql = dp / 12.0

print(dp)
#print(ql)
-- OUTPUT:
11.11111111111111
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:32:58) 
-- CODE:
tempo=float(input("Insira o tempo gasto: "))
vel=float(input("Insira o velocidade media: "))

dp = vel/tempo
ql = dp / 12.0

print(dp)
#print(ql)
-- OUTPUT:
11.11111111111111
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:32:58) 
-- CODE:
tempo=float(input("Insira o tempo gasto: "))
vel=float(input("Insira o velocidade media: "))

dp = vel/tempo
ql = dp / 12.0

print(dp)
#print(ql)
-- OUTPUT:
11.11111111111111
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:32:58) 
-- CODE:
tempo=float(input("Insira o tempo gasto: "))
vel=float(input("Insira o velocidade media: "))

dp = vel/tempo
ql = dp / 12.0

print(dp)
#print(ql)
-- OUTPUT:
11.11111111111111
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:32:58) 
-- CODE:
tempo=float(input("Insira o tempo gasto: "))
vel=float(input("Insira o velocidade media: "))

dp = vel/tempo
ql = dp / 12.0

print(dp)
#print(ql)
-- OUTPUT:
11.11111111111111
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:32:58) 
-- CODE:
tempo=float(input("Insira o tempo gasto: "))
vel=float(input("Insira o velocidade media: "))

dp = vel/tempo
ql = dp / 12.0

print(dp)
#print(ql)
-- OUTPUT:
11.11111111111111
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:32:58) 
-- CODE:
tempo=float(input("Insira o tempo gasto: "))
vel=float(input("Insira o velocidade media: "))

dp = vel/tempo
ql = dp / 12.0

print(dp)
#print(ql)
-- OUTPUT:
11.11111111111111
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:32:58) 
-- CODE:
tempo=float(input("Insira o tempo gasto: "))
vel=float(input("Insira o velocidade media: "))

dp = vel/tempo
ql = dp / 12.0

print(dp)
#print(ql)
-- OUTPUT:
11.11111111111111
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:32:58) 
-- CODE:
tempo=float(input("Insira o tempo gasto: "))
vel=float(input("Insira o velocidade media: "))

dp = vel/tempo
ql = dp / 12.0

print(dp)
#print(ql)
-- OUTPUT:
11.11111111111111
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:32:58) 
-- CODE:
tempo=float(input("Insira o tempo gasto: "))
vel=float(input("Insira o velocidade media: "))

dp = vel/tempo
ql = dp / 12.0

print(dp)
#print(ql)
-- OUTPUT:
11.11111111111111
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:32:58) 
-- CODE:
tempo=float(input("Insira o tempo gasto: "))
vel=float(input("Insira o velocidade media: "))

dp = vel/tempo
ql = dp / 12.0

print(dp)
#print(ql)
-- OUTPUT:
11.11111111111111
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:32:58) 
-- CODE:
tempo=float(input("Insira o tempo gasto: "))
vel=float(input("Insira o velocidade media: "))

dp = vel/tempo
ql = dp / 12.0

print(dp)
#print(ql)
-- OUTPUT:
11.11111111111111
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:33:43) 
-- CODE:
tempo=float(input("Insira o tempo gasto: "))
vel=float(input("Insira o velocidade media: "))

dp = vel*tempo
ql = dp / 12.0

print(dp)
#print(ql)
-- OUTPUT:
900.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:34:03) 
-- CODE:
tempo=float(input("Insira o tempo gasto: "))
vel=float(input("Insira o velocidade media: "))

dp = vel*tempo
ql = dp / 12.0

print(dp)
print(ql)
-- OUTPUT:
900.0
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:34:15) 
-- CODE:
tempo=float(input("Insira o tempo gasto: "))
vel=float(input("Insira o velocidade media: "))

dp = vel*tempo
ql = dp / 12.0

print(dp)
print(ql)
-- EXECUTION TIME:
0.146622
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0
75.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
600.0
50.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
96.0
8.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
